unpackaged/main/default/objects/RICSC_Address__c/RICSC_Address__c.object-meta.xml
<CustomObject>
    <description>This object is used to collect  the Addresses of the related Local records.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RICSC_VCASharingGolden__c</fullName>
        <label>VCA Sharing Golden</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RICSC_VCASharingLocal__c</fullName>
        <label>VCA Sharing Local</label>
    </sharingReasons>
</CustomObject>