unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Account__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Account (Contact)</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>RICSC_AddressesAccount</relationshipName>
        <type>Lookup</type>
    </CustomField>