unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Address__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Address__c</fullName>
        <description>Field to capture the full address</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>