unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_AddressType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AddressType__c</fullName>
        <description>Picklist to capture the type of address</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Home Address</fullName>
                </value>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>Old Address</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Residency</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Summer Home</fullName>
                </value>
                <value>
                    <fullName>Temporary / Hotel</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Web Unknown</fullName>
                </value>
                <value>
                    <fullName>Winter Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>