unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_AddressUndeliverable__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AddressUndeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not this address can be used for deliveries</description>
        <label>Address Undeliverable</label>
        <type>Checkbox</type>
    </CustomField>