unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_AuthorisationGroup__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AuthorisationGroup__c</fullName>
        <description>Refer to the Auth group in the source system. See PersonAccount object</description>
        <label>Authorisation Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_SAPAuthorisationGroup</valueSetName>
        </valueSet>
    </CustomField>