unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Building__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Building__c</fullName>
        <description>Building reference for the address</description>
        <label>Building</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>