unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_City__c.field-meta.xml
<CustomField>
        <fullName>RICSC_City__c</fullName>
        <description>Field to capture the city</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>