unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Country__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Country__c</fullName>
        <description>Picklist to capture the country of the address</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_Country</valueSetName>
        </valueSet>
    </CustomField>