unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_District__c.field-meta.xml
<CustomField>
        <fullName>RICSC_District__c</fullName>
        <description>Information related to china customers coming from SAP CRM</description>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>