unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_EndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EndDate__c</fullName>
        <description>Date field to indicate to which date the address is valid</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>