unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Floor__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Floor__c</fullName>
        <description>Floor reference for the address</description>
        <label>Floor</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>