unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_GR__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the golden record</description>
        <label>GR</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>RICSC_AddressesGR</relationshipName>
        <type>Lookup</type>
    </CustomField>