unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_GRMainAddress__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GRMainAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a flag indicating the main email address for the Golden record (based on the GR Lookup - not Account)</description>
        <label>GR Main Address</label>
        <type>Checkbox</type>
    </CustomField>