unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Location__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Location__c</fullName>
        <description>Field to comply with China naming convention</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>