unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_LRMainAddress__c.field-meta.xml
<CustomField>
        <fullName>RICSC_LRMainAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a flag indicating the main email address for the Local record (based on the Account Lookup - not GR)</description>
        <label>LR Main Address</label>
        <type>Checkbox</type>
    </CustomField>