unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Notes__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Notes__c</fullName>
        <description>Notes coming from integration</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>