unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_OtherCity__c.field-meta.xml
<CustomField>
        <fullName>RICSC_OtherCity__c</fullName>
        <description>Information related to china customers coming from SAP CRM</description>
        <label>Other City</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>