unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_POBox__c.field-meta.xml
<CustomField>
        <fullName>RICSC_POBox__c</fullName>
        <description>PO box of address</description>
        <label>PO Box</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>