unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_PostalCode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PostalCode__c</fullName>
        <description>Field to indicate the postal code</description>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>