unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Roomnumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Roomnumber__c</fullName>
        <description>Roomnumber reference for the address</description>
        <label>Roomnumber</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>