unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_StateProvince__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StateProvince__c</fullName>
        <description>Field to indicate state/province</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>