unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Street2__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Street2__c</fullName>
        <description>Additional second line to capture the street</description>
        <label>Street 2</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>