unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Street3__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Street3__c</fullName>
        <description>Additional third line to capture the street</description>
        <label>Street 3</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>