unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Street4__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Street4__c</fullName>
        <description>Additional fourth line to capture the street</description>
        <label>Street 4</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>