unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_StreetNumber__c.field-meta.xml
<CustomField>
        <fullName>RICSC_StreetNumber__c</fullName>
        <description>Field to indicate the street number</description>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>