unpackaged/main/default/objects/RICSC_Address__c/fields/RICSC_Taxjurcode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Taxjurcode__c</fullName>
        <description>the jurisdiction code (to calculate the tax in the US)</description>
        <label>Taxjurcode</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>