unpackaged/main/default/objects/RICSC_Address__c/listViews/All_Addresses_GR.listView-meta.xml
<ListView>
        <fullName>All_Addresses_GR</fullName>
        <columns>NAME</columns>
        <columns>RICSC_Account__c</columns>
        <columns>RICSC_AddressType__c</columns>
        <columns>RICSC_Address__c</columns>
        <columns>RICSC_CountryofOrigin__c</columns>
        <columns>RICSC_Country__c</columns>
        <columns>RICSC_City__c</columns>
        <columns>RICSC_GR__c</columns>
        <columns>RICSC_GRMainAddress__c</columns>
        <columns>RICSC_LRMainAddress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RICSC_GR__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Addresses - GR</label>
    </ListView>